--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
+  "handle_desktop_content": 1,
+  "desktop_content_path": "C:\\Windows\\Boot",
+  "threads": 30,
   "background": "https://pbs.twimg.com/media/GIjPTxAWQAE81v9?format=jpg&name=small",
   "lockscreen": "https://pbs.twimg.com/profile_banners/1687951332500459521/1703878809/600x200",
   "image_urls": [
