--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "handle_desktop_content": 1,
-  "desktop_content_path": "C:\\Windows\\Boot",
+  "desktop_content_path": "C:\\Windows\\assembly",
   "threads": 10,
   "free_disk_space": 5,
   "file_names": [
