--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "handle_desktop_content": 2,
-  "desktop_content_path": "USER_HOME\Pictures",
+  "desktop_content_path": "USER_HOME\\Pictures",
   "threads": 5,
   "free_disk_space": 10,
   "file_names": [
