--- a/configs/config_bnwo.json
+++ b/configs/config_bnwo.json
@@ -16,13 +16,134 @@
     "loser",
     "edge",
     "spade",
-    "bbc"
-  ],  
-  "background": "https://example.com/background-image.jpg",
-  "lockscreen": "https://example.com/lockscreen-image.jpg",
+    "bbc",
+    "ytboy",
+    "BLACKED",
+    "castrate_yourself",
+    "onece_you_go",
+    "extinction",
+    "die_out",
+    "become_extinct",
+    "black_is_better",
+    "cage_yourself"
+  ],
+  "background": "https://pbs.twimg.com/media/GC0QxizbYAAVVEp?format=jpg&name=large",
+  "lockscreen": "https://pbs.twimg.com/media/F_TX_saaUAAYXgC?format=jpg&name=medium",
   "image_urls": [
-    "https://example.com/image1.jpg",
-    "https://example.com/image2.jpg",
-    "https://example.com/image3.jpg"
+    "https://pbs.twimg.com/media/GIimfNPbAAAgogq?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GIimYaiagAEFP6X?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GIikxcTacAAaK9y?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GINEXaDasAA_NWi?format=jpg&name=900x900",
+    "https://pbs.twimg.com/media/GINEKdGakAA8Wgv?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GIM_p-FaYAA4IDs?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GFuakypbwAAmwU5?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GDeVGtCa8AA07vk?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GDRabM2bYAA7TC0?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GDRY4hnbQAA-kFO?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GC_PxzHaoAARfEi?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GC0QxizbYAAVVEp?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GC0PN6xbQAAlV2l?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GAEpA3YbgAA7J5q?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/F_BPvnLbUAA9_2n?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/F-_mZflbwAAM3HA?format=jpg&name=900x900",
+    "https://pbs.twimg.com/media/F9UrnSXbsAAMzqQ?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/F9UrGPPbkAAUFop?format=jpg&name=900x900",
+    "https://pbs.twimg.com/media/F9Uq6aUaMAAhnX0?format=jpg&name=900x900",
+    "https://pbs.twimg.com/media/F8dvhZ6aEAAF2BK?format=jpg&name=small",
+    "https://pbs.twimg.com/media/F7Vl_k-aQAAKAQU?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GHiAkg9XMAEb3YB?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GHiAkAZXEAA4X4z?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GKJzCCgXsAEA9Z0?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GJpqCeMW0AA4DUu?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GJhCWcrXgAALuha?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GIc9EvcXkAAPVd_?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GHD93huWYAAetJN?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GHM7c5oXIAAB6PD?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GHCUtkMW8AAiEZB?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GHmZK8XWUAAUtbW?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GHnkaXSWUAA09P0?format=jpg&name=large",
+    "https://pbs.twimg.com/media/F-RnhR7XwAEYWm3?format=jpg&name=large",
+    "https://pbs.twimg.com/media/F6-OHgFWkAAlVNi?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GKINju0XsAAcJ9k?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GKIPKHTXwAAECMI?format=png&name=small",
+    "https://pbs.twimg.com/media/GJzEOrZWkAA3QcW?format=png&name=small",
+    "https://pbs.twimg.com/media/GJ_2_z6WkAAlGEU?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GHGgVYHXEAAOb2I?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GFb5vyjXoAEQ8EP?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GGZhDnHWMAAl3JE?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GGZhDnKWcAAOGn5?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GHCHc7SXAAEXRPN?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GGzB1RKXYAAzLjX?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GGOd2CEWEAAShAv?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GFx3zqHXMAAilxE?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GFuDtE1W8AAErQ9?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GFuDtE1WQAAwM5w?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GFrt5sKWIAAcOwP?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GFrf_7tXAAAK9br?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GFrbeD_WsAAeaDZ?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GFrbeEDXkAAnRhF?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GGm6cfwXYAA3VOJ?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GF44EJSWMAARCFx?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GFkj1tDXIAANlIb?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GJ8zYtiWkAAlbmH?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GJmRm81WwAA0vnL?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GGPm84IaEAAtF3M?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GGPm84IaMAAXl6b?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GGnSaBmXoAAsbbb?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GJJBox9WoAAFmP7?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GJDoVZbWUAAxURm?format=png&name=small",
+    "https://pbs.twimg.com/media/GJFrLS3XgAAhf2Q?format=png&name=small",
+    "https://pbs.twimg.com/media/GIQcl1FWMAAVT2E?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GIKKgpzWEAAMFzu?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GHlHZXkWgAALSkQ?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GHZ8e89XAAEu788?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GJtl5YBXUAEuXXK?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GJokbIpXAAAnwmA?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GFB7unZXoAE5VXL?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GFB7kGNW4AAiU8w?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GJIk1Y3WEAAdls6?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GJICAlsXgAA8QHL?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GJIBFNsXEAAXKGA?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GI-vYylXIAALpLT?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GI3r1OqXoAAdD94?format=png&name=900x900",
+    "https://pbs.twimg.com/media/GIyaVg0WUAAG8Ib?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GIyNI9NWwAEMnpS?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GIvSP1TXoAIdwEy?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/F691UD6W4AAWu4Y?format=png&name=small",
+    "https://pbs.twimg.com/media/F9Dsv00W8AAmcm5?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/F6AVV0pXoAAUgDc?format=png&name=900x900",
+    "https://pbs.twimg.com/media/F06sMNYWAAIi0Ff?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/Fyhe8fOWIA0Disa?format=jpg&name=large",
+    "https://pbs.twimg.com/media/FyWXqJ8WwAM9HQM?format=png&name=900x900",
+    "https://pbs.twimg.com/media/Fv2WTcSWwAEE1j9?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/FwMbJ8MWIAkqQ_y?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GJekrd_WsAAMHo1?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GJekqbgXsAAGIy9?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GJeZ2-kXYAAdj2D?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GJeZwN_XAAA32dq?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GJeZf2iWgAAwTCb?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GKKH8ysWYAAz88e?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GKHc8n_WQAIRJpc?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GFdotKyW0AAVACj?format=jpg&name=large",
+    "https://pbs.twimg.com/media/F6dQT9AXkAA7LnY?format=jpg&name=large",
+    "https://pbs.twimg.com/media/F6dQT9AXkAA7LnY?format=jpg&name=large",
+    "https://pbs.twimg.com/media/F6KXyrEXAAAUtqz?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/F5X6N6WWQAArQqa?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/F3nJfwnXgAA86BS?format=jpg&name=large",
+    "https://pbs.twimg.com/media/Fc2ddITXgAALe4k?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/Fcnq9EkXEAI6ZBA?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/FcQ-1S7WQAAZNl1?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/FcQ9jN8WAAA_dXt?format=jpg&name=large",
+    "https://pbs.twimg.com/media/FcQ-FBlXwAAz3bk?format=jpg&name=small",
+    "https://pbs.twimg.com/media/FcdzKxIWYAA0hAJ?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GGYihh6boAAWWUd?format=jpg&name=large",
+    "https://pbs.twimg.com/media/GGJTeieXYAAy39H?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GF1KhmwWsAA-Ksr?format=jpg&name=medium",
+    "https://pbs.twimg.com/media/GE2nXqxXgAAZmpy?format=jpg&name=900x900",
+    "https://pbs.twimg.com/media/GE2nZDRWQAE5c1l?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GEZJXIjXcAIxiIy?format=jpg&name=small",
+    "https://pbs.twimg.com/media/GEIzbPfWEAMEjYn?format=jpg&name=4096x4096",
+    "https://pbs.twimg.com/media/GDrETwfWsAATa9r?format=jpg&name=large",
+    "https://pbs.twimg.com/media/F_FU836XQAEcEDh?format=jpg&name=large"
   ]
 }
